svg icon safari issue fixed

--- a/src/Components/CartProducts/CartProducts.scss
+++ b/src/Components/CartProducts/CartProducts.scss
@@ -74,11 +74,6 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-
-        svg {
-            height: 40px;
-            width: 40px;
-        }
     }
 
 }
